--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Главная</title>
-    <link rel="stylesheet" href="css/style.min.css?_v=20230728151522">
+    <link rel="stylesheet" href="css/style.min.css?_v=20230728152051">
 
 </head>
 
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                     <div data-view class="base__imgs">
-                        <picture><source srcset="img/IMAGE.webp" type="image/webp"><img class="_img base__img" src="img/IMAGE.jpg" alt="Img"></picture>
+                        <picture><source srcset="img/IMAGEfirst.webp" type="image/webp"><img class="_img base__img" src="img/IMAGEfirst.jpg" alt="Img"></picture>
                         <span class="circle"></span>
                     </div>
                 </div>
@@ -306,10 +306,10 @@
         
 
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js?_v=20230728151522" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js?_v=20230728151522" integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.19/bundled/lenis.min.js?_v=20230728151522"></script>
-    <script src="js/app.min.js?_v=20230728151522"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js?_v=20230728152051" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js?_v=20230728152051" integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.19/bundled/lenis.min.js?_v=20230728152051"></script>
+    <script src="js/app.min.js?_v=20230728152051"></script>
 </body>
 
 </html>
